Configured FB deploy to use single page app routing

--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,10 @@
   },
   "hosting": {
     "public": "./ui/dist",
+    "rewrites": [ {
+      "source": "**",
+      "destination": "/index.html"
+    } ],
     "ignore": [
       "firebase.json",
       "**/.*",
