--- a/ui/package.json
+++ b/ui/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@leverege/gcs-deploy": "git+ssh://git@bitbucket-leverege:leverege/gcs-deploy.git",
     "better-react-spinkit": "^2.0.4",
     "copy-webpack-plugin": "^4.5.1",
     "feather-icons-react": "^0.2.0",
     "firebase": "^5.0.4",
     "muicss": "^0.9.39",
+    "prop-types": "^15.6.2",
     "react": "^16.4.0",
     "react-animate-height": "^2.0.1",
     "react-dom": "^16.4.0",
@@ -15,7 +17,7 @@
     "react-redux-firebase": "^2.1.5",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^1.1.5",
     "react-slidedown": "^1.3.0",
     "react-transition-group": "^2.3.1",
     "redux": "^4.0.0",
@@ -32,10 +34,11 @@
     "lint": "esw webpack.config.* src tools --color",
     "lint:watch": "npm run lint -- --watch",
     "analyze": "plato -r -d report -e .eslintrc src",
+    "gcs-deploy": "gcs-deploy"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.5",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -62,7 +65,8 @@
     "eslint-watch": "^3.1.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
-    "less": "^2.7.3",
+    "gcs-deploy": "git+ssh://git@bitbucket-leverege:leverege/gcs-deploy.git",
+    "less": "^3.8.1",
     "less-loader": "^4.0.4",
     "mocha": "^5.1.1",
     "postcss-loader": "^2.0.10",
