--- a/ui/package.json
+++ b/ui/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-es2017": "^7.0.0-beta.53",
+    "babel-loader": "^8.0.0",
+    "babel-preset-es2017": "^6.24.1",
     "better-react-spinkit": "^2.0.4",
     "copy-webpack-plugin": "^4.5.1",
     "feather-icons-react": "^0.2.0",
@@ -12,6 +15,7 @@
     "react": "^16.4.0",
     "react-animate-height": "^2.0.1",
     "react-dom": "^16.4.0",
+    "react-ga": "^2.5.3",
     "react-redux": "^5.0.7",
     "react-redux-firebase": "^2.1.5",
     "react-router": "^4.3.1",
@@ -21,14 +25,15 @@
     "react-transition-group": "^2.3.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "url-loader": "^1.1.1",
     "victory": "^0.27.0"
   },
   "scripts": {
     "clean": "rm -fr dist docker/image",
     "build": "webpack --progress --config webpack.config.prod.js",
     "dockerize": "npm run clean && npm run build && cd docker && ./create",
-    "startHttps": "webpack-dev-server --https --progress --content-base src --watch --history-api-fallback --inline --hot --host 0.0.0.0 --port 8589",
-    "start": "webpack-dev-server --https --progress --content-base src --watch --history-api-fallback --inline --hot --host 0.0.0.0 --port 8589",
+    "startHttps": "webpack-dev-server --https --progress --content-base src --watch --history-api-fallback --inline --hot --host 0.0.0.0 --port 8590",
+    "start": "webpack-dev-server --https --progress --content-base src --watch --history-api-fallback --inline --hot --host 0.0.0.0 --port 8590",
     "test": "mocha ./test",
     "lint": "esw webpack.config.* src tools --color",
     "lint:watch": "npm run lint -- --watch",
@@ -36,17 +41,31 @@
     "gcs-deploy": "gcs-deploy"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-object-assign": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^7.2.5",
-    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.16.0",
+    "babel-plugin-root-import": "^6.1.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-2017": "0.0.0",
     "babel-preset-node8": "^1.2.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-1": "^6.16.0",
     "babel-root-import": "^4.1.3",
     "chai": "^4.1.2",
     "copy-webpack-plugin": "^4.3.1",
@@ -69,8 +88,7 @@
     "postcss-loader": "^2.0.10",
     "postcss-nested": "^3.0.0",
     "style-loader": "^0.20.1",
-    "uglifyjs-webpack-plugin": "^1.1.8",
-    "url-loader": "^0.6.2",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^3.10.0",
     "webpack-combine-loaders": "^2.0.3",
     "webpack-dev-server": "^2.11.1"
