--- a/ui/package.json
+++ b/ui/package.json
@@ -1,96 +1,73 @@
 {
   "name": "microchip-ui",
-  "version": "0.1.0",
-  "private": true,
+  "version": "2.0.0",
+  "private": false,
+  "scripts": {
+    "build": "webpack --progress --config webpack.config.prod.js",
+    "startHttps": "webpack-dev-server --https --progress --content-base src --watch --history-api-fallback --inline --hot --host 0.0.0.0 --port 8589",
+    "start": "webpack-dev-server --https --progress --content-base src --watch --history-api-fallback --inline --hot --host 0.0.0.0 --port 8589"
+  },
   "dependencies": {
-    "@babel/preset-es2017": "^7.0.0-beta.53",
-    "babel-loader": "^8.0.0",
-    "babel-preset-es2017": "^6.24.1",
     "better-react-spinkit": "^2.0.4",
-    "copy-webpack-plugin": "^4.5.1",
-    "feather-icons-react": "^0.2.0",
+    "classnames": "^2.2.6",
     "firebase": "^5.0.4",
-    "muicss": "^0.9.39",
+    "muicss": "^0.9.41",
     "prop-types": "^15.6.2",
-    "react": "^16.4.0",
-    "react-animate-height": "^2.0.1",
-    "react-dom": "^16.4.0",
-    "react-ga": "^2.5.3",
-    "react-redux": "^5.0.7",
+    "query-string": "^6.2.0",
+    "react": "^16.7.0",
+    "react-animate-height": "^2.0.7",
+    "react-dom": "^16.7.0",
+    "react-ga": "^2.5.6",
+    "react-redux": "^6.0.0",
     "react-redux-firebase": "^2.1.5",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^1.1.5",
-    "react-slidedown": "^1.3.0",
-    "react-transition-group": "^2.3.1",
-    "redux": "^4.0.0",
+    "react-slidedown": "^2.0.7",
+    "react-toggle-switch": "^3.0.4",
+    "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "url-loader": "^1.1.1",
     "victory": "^0.27.0"
   },
-  "scripts": {
-    "clean": "rm -fr dist docker/image",
-    "build": "webpack --progress --config webpack.config.prod.js",
-    "dockerize": "npm run clean && npm run build && cd docker && ./create",
-    "startHttps": "webpack-dev-server --https --progress --content-base src --watch --history-api-fallback --inline --hot --host 0.0.0.0 --port 8590",
-    "start": "webpack-dev-server --https --progress --content-base src --watch --history-api-fallback --inline --hot --host 0.0.0.0 --port 8590",
-    "test": "mocha ./test",
-    "lint": "esw webpack.config.* src tools --color",
-    "lint:watch": "npm run lint -- --watch",
-    "analyze": "plato -r -d report -e .eslintrc src",
-    "gcs-deploy": "gcs-deploy"
-  },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
-    "@babel/plugin-proposal-do-expressions": "^7.0.0",
-    "@babel/plugin-proposal-export-default-from": "^7.0.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
-    "@babel/plugin-proposal-function-sent": "^7.0.0",
-    "@babel/plugin-proposal-json-strings": "^7.0.0",
-    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
-    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
-    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
-    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-syntax-import-meta": "^7.0.0",
-    "@babel/plugin-transform-object-assign": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^7.2.5",
-    "babel-eslint": "^8.2.1",
+    "autoprefixer": "^9.4.7",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-react-css-modules": "^5.0.0",
     "babel-plugin-root-import": "^6.1.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-preset-2017": "0.0.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-node8": "^1.2.0",
-    "babel-root-import": "^4.1.3",
-    "chai": "^4.1.2",
-    "copy-webpack-plugin": "^4.3.1",
-    "css-loader": "^0.28.9",
-    "dotenv-webpack": "^1.5.7",
-    "eslint": "^4.18.2",
-    "eslint-config-airbnb": "^16.1.0",
+    "babel-root-import": "^4.1.8",
+    "chai": "^4.2.0",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^2.1.0",
+    "dotenv-webpack": "^1.7.0",
+    "eslint": "^5.12.1",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-es2015-react": "^0.2.1",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.0",
+    "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-watch": "^3.1.3",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
-    "less": "^3.8.1",
-    "less-loader": "^4.0.4",
-    "mocha": "^5.1.1",
-    "postcss-loader": "^2.0.10",
-    "postcss-nested": "^3.0.0",
-    "style-loader": "^0.20.1",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "webpack": "^3.10.0",
-    "webpack-combine-loaders": "^2.0.3",
-    "webpack-dev-server": "^2.11.1"
+    "eslint-watch": "^4.0.2",
+    "file-loader": "^3.0.1",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "mocha": "^5.2.0",
+    "postcss-less": "^3.1.2",
+    "postcss-loader": "^3.0.0",
+    "postcss-nested": "^4.1.1",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-combine-loaders": "^2.0.4",
+    "webpack-dev-server": "^3.1.14"
   }
 }
