--- a/setup/functions/package.json
+++ b/setup/functions/package.json
@@ -9,13 +9,16 @@
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
+  "engines": {
+    "node": "8"
+  },
   "dependencies": {
-    "firebase-admin": "~5.12.1",
-    "firebase-functions": "^1.0.3"
+    "firebase-admin": "~8.2.0",
+    "firebase-functions": "^3.0.2"
   },
   "devDependencies": {
-    "eslint": "^4.12.0",
-    "eslint-plugin-promise": "^3.6.0"
+    "eslint": "^6.0.1",
+    "eslint-plugin-promise": "^4.2.1"
   },
   "private": true
 }
